Tue Sep  3 20:26:22 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_delete.c (dbdelete): Construct new multi_content
	  correctly (names as well as extensions) when deleting some of its
	  elements.

Fri Aug 30 03:11:42 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Restore the fix from 13 July 2001
	  that got lost while implementing -E. We need to look up the
	  correct character set each time a page is displayed, but still
	  honour any device explicitly set by -E, so test different_encoding
	  rather than roff_device.

Thu Aug 29 01:14:19 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (setenv_less): Export the value of $MAN_PN for the
	  benefit of other pagers (suggestion from Jeff Sheinberg).

Thu Aug 29 00:50:54 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c: dbfilters is no longer a global variable.
	  (get_preprocessors, make_roff_command, display): Take an extra
	  dbfilters argument.
	  (local_man_loop, make_roff_command, display, display_filesystem):
	  Adjust callers.
	  (display_database): Likewise. Pass in->filter as the dbfilters
	  argument to display() rather than setting it globally (and
	  forgetting to set it back to NULL later).
	* src/man.h: Update prototypes.

Sat Aug 17 21:53:38 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/straycats.c (check_for_stray): Initialize info.name and
	  info.filter. Remove unhelpful __inline__.

Tue Aug 13 18:25:13 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (usage): Document new option -W, --where-cat,
	  --location-cat.
	  (man_getopt): Accept -W.
	  (display): -w now just prints man_file, while -W prints cat_file.
	  If both are given, the two filenames are printed separated by a
	  space, as -w used to do.
	* man/man1/man.man1, docs/NEWS: Document this.

Sat Aug 10 13:19:34 BST 2002  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Preliminary entries for 2.4.1.
